Bug 145874 - FILESAVE: PDF: gradient switch colors
Summary: FILESAVE: PDF: gradient switch colors
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Printing and PDF export (show other bugs)
Version:
(earliest affected)
7.3.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Julien Nabet
URL:
Whiteboard: target:7.3.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2021-11-24 16:05 UTC by Xisco Faulí
Modified: 2021-11-24 22:08 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Comparison before and after RT (589.74 KB, image/png)
2021-11-24 16:05 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2021-11-24 16:05:08 UTC
Created attachment 176475 [details]
Comparison before and after RT

Steps to reproduce:
1. Open attachment 46863 [details] from bug 37318 -> Blue is above, green below
2. Export it to PDF

-> Green is above and blue is above

Reproduced in

Version: 7.3.0.0.alpha1+ / LibreOffice Community
Build ID: becd76743fd7a3ae84404f26b1afb60b923cabb2
CPU threads: 4; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

[Bug found by office-interoperability-tools]
Comment 1 Xisco Faulí 2021-11-24 16:06:39 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=bc0ab08634f59e1a1814e575fe6ad5e50bf1aee1

author	Mike Kaganski <mike.kaganski@collabora.com>	2021-11-19 00:22:31 +0300
committer	Mike Kaganski <mike.kaganski@collabora.com>	2021-11-19 15:42:03 +0100
commit bc0ab08634f59e1a1814e575fe6ad5e50bf1aee1 (patch)
tree 8691eec1adefd9e4def8245898e8a3e5c5542037
parent 168ae4c00a86b7534dedd303f9ef008e19822b99 (diff)
Drop F_PI1800/F_PI18000, and unify deg2rad/rad2deg conversions

Bisected with: bibisect-linux64-7.3

Adding Cc: to Mike Kaganski
Comment 2 Xisco Faulí 2021-11-24 16:14:18 UTC
attachment 83059 [details] from bug 67347 is also affected by this issue
Comment 3 Julien Nabet 2021-11-24 19:00:15 UTC
On pc Debian x86-64 with master sources updated today, I could reproduce this.
Comment 4 Julien Nabet 2021-11-24 20:52:54 UTC
With https://gerrit.libreoffice.org/c/core/+/125791, gradient is ok in pdf exported.
Comment 5 Commit Notification 2021-11-24 22:07:09 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/5461ed9828b48f947f99a034d7e3d8072157c58d

tdf#145874: fix "Drop deg2rad/rad2deg conversions" for gradient export in a pdf

It will be available in 7.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.