tdf#145874: fix "Drop deg2rad/rad2deg conversions" for gradient export in a pdf

Regression from:
https://cgit.freedesktop.org/libreoffice/core/commit/?id=bc0ab08634f59e1a1814e575fe6ad5e50bf1aee1
Drop F_PI1800/F_PI18000, and unify deg2rad/rad2deg conversions

Change-Id: I40089b166242d06e417b1877146d43df192d6225
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/125791
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Tested-by: Jenkins